Use binary format in launcher metadata